<resources>
    <string name="app_name" translatable="false">APK Extractor</string>
    <string name="apk_action_share">Share</string>
    <string name="apk_action_delete">Delete</string>
    <string name="apk_action_delete_success">APK deleted</string>
    <string name="apk_action_delete_failed">APK deletion failed</string>
    <string name="apk_action_uninstall_app">Uninstall app</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_screen_save_file_settings">Save file format</string>
    <string name="title_screen_auto_backup_settings">Auto Backup</string>
    <string name="title_screen_about_settings">About</string>
    <string name="title_screen_swipe_action_settings">Swipe Actions</string>
    <string name="title_screen_data_collection_settings">Data Collection</string>
    <string name="save_header">Storage &amp; Backup</string>
    <string name="app_type_header">Apps</string>
    <string name="info_header">About &amp; Support</string>
    <string name="update_available_title">Update Available</string>
    <string name="update_available_summary">Click here to download and install app update.</string>
    <string name="choose_save_dir">Choose Save Directory</string>
    <string name="choose_save_dir_summary">Choose or alter Path for Saving APKs</string>
    <string name="auto_backup">Auto Backup Service</string>
    <string name="auto_backup_summary">Automatic backup of Apps after Update</string>
    <string name="auto_backup_app_list">Choose Apps for Auto Backup</string>
    <string name="auto_backup_app_list_summary">Select Apps from which to create an automatic backup after update </string>
    <string name="backup_mode_split_apk">Backup split Source APKs</string>
    <string name="backup_mode_split_apk_summary_active">Backup base.apk + split apks as APK bundle (can be renamed to \'.zip\' and used as such).</string>
    <string name="backup_mode_split_apk_summary_inactive">Only backup base.apk (warning: Install an App only from base.apk may lead to crash on launch due to missing resources).</string>
    <string name="app_type_system">System</string>
    <string name="app_type_system_updated">System (updated)</string>
    <string name="app_type_user">User</string>
    <string name="data_collection_header">Privacy &amp; Data Collection</string>
    <string name="data_collection_analytics">Analytics</string>
    <string name="data_collection_analytics_summary">Collection of user data, such as app interactions and screen views, to understand user behavior and optimize app performance.</string>
    <string name="data_collection_crashlytics">Crashlytics</string>
    <string name="data_collection_crashlytics_summary">Collection of crash reports and system-related data to troubleshoot issues and improve stability.</string>
    <string name="data_collection_perf">Performance</string>
    <string name="data_collection_perf_summary">Collection of performance metrics, such as app startup time and network requests, to optimize app performance.</string>
    <string name="data_collection_delete">Delete Installations-ID</string>
    <string name="data_collection_delete_summary">Firebase installation IDs are different for every installation of every application; different applications on the same device have different Firebase installation IDs. Firebase installation IDs identify app installations and data tied to those app installations.\n\nWhen you delete an installation ID, the data tied to that installation ID is removed from live and backup systems of all Firebase services that use Firebase installation IDs to identify installations within 180 days. This process is described at a high level in Google’s statement on deletion and retention.</string>
    <string name="data_collection_delete_summary_hyperlink_text">statement on deletion and retention</string>
    <string name="data_collection_delete_summary_hyperlink_url">https://policies.google.com/technologies/retention</string>
    <string name="data_collection_delete_success">Firebase-Installation-ID deleted</string>
    <string name="data_collection_delete_failure">Unable to delete Firebase-Installation-ID, try again later or contact the developer</string>
    <string name="github">GitHub</string>
    <string name="github_summary">View Code or create Issue, Pull Request</string>
    <string name="googleplay">Google Play</string>
    <string name="googleplay_summary">View Play Store Page of App</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="terms_title">Terms &amp; Conditions</string>
    <string name="thanks_translaton_title">Translators</string>
    <string name="oss_dependencies_title">Used Libraries</string>
    <string name="version">Version: %s (%d)</string>
    <string name="appearance">Appearance &amp; Theme</string>
    <string name="ui_mode">Night Mode</string>
    <string name="ui_mode_summary">Change App Appearance</string>
    <string name="ui_follow_os">Follow OS</string>
    <string name="ui_dark">Dark</string>
    <string name="ui_white">White</string>
    <string name="use_material_you">Use Material You</string>
    <string name="use_material_you_summary">Use Dynamic Color Theme, provided by Wallpaper colors in Android 12 und upwards</string>
    <string name="gestures_and_interactions">Gestures &amp; Interactions</string>
    <string name="app_list_swipe_actions">App List Swipe Actions</string>
    <string name="apk_swipe_action_right_title">Right swipe action</string>
    <string name="apk_swipe_action_right_summary">Select what happens if you swipe to the right on an entry in the App list</string>
    <string name="apk_swipe_action_left_title">Left swipe action</string>
    <string name="apk_swipe_action_left_summary">Select what happens if you swipe to the left on an entry in the App list</string>
    <string name="apk_swipe_action_custom_threshold_title">Activate swipe action custom threshold</string>
    <string name="apk_swipe_action_custom_threshold_summary">Use the swipe action threshold modifier instead of the default one of 56dp.</string>
    <string name="advanced_swipe_action_header">Advanced Swipe Action Settings</string>
    <string name="apk_swipe_action_threshold_title">Swipe Action Threshold Modifier</string>
    <string name="apk_swipe_action_threshold_summary">Change the percentage of the Positional Threshold to trigger the swipe action more easy.</string>
    <string name="app_options_header">App Options</string>
    <string name="favorites">Favorites</string>
    <string name="sort_favorites">Sort Favorites on top</string>
    <string name="filter_title">Filter</string>
    <string name="all_sources">Any source</string>
    <string name="other_sources">Other sources</string>
    <string name="filter_category_all">All categories</string>
    <string name="filter_category_undefined">Undefined</string>
    <string name="filter_category_games">Games</string>
    <string name="filter_category_audio">Audio</string>
    <string name="filter_category_video">Video</string>
    <string name="filter_category_image">Image</string>
    <string name="filter_category_social">Social</string>
    <string name="filter_category_news">News</string>
    <string name="filter_category_maps">Maps</string>
    <string name="filter_category_productivity">Productivity</string>
    <string name="installation_sources">Installation Source</string>
    <string name="app_categories">Category</string>
    <string name="other_filter">Other Filter</string>
    <string name="backup_apk_bundle_file_ending_title">APK Bundle file ending</string>
    <string name="backup_apk_bundle_file_ending_summary">Set default file ending (suffix) for bundled apk files (split apk)."</string>
    <string name="ignore_battery_optimization_title">Disable Battery Optimization</string>
    <string name="ignore_battery_optimization_summary">If the Auto Backup Service gets killed in background without restarting, you might consider disable battery optimization for this app so it keeps running in background</string>
    <string name="check_update_on_start_title">Check for update on start</string>
    <string name="check_update_on_start_summary">Check on start of the app if new updates are available, and show a prompt to install it.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary">App cache size: %s</string>
    <string name="clear_cache_success">Cache cleared</string>
    <string name="clear_cache_failed">Cache could not be cleared</string>
    <string name="app_save_name">APK Name</string>
    <string name="app_save_name_summary">Configure APK save name information, use Drag on selected Elements to change position in File name.</string>
    <string name="app_save_name_name">App Name</string>
    <string name="app_save_name_package">Package Name</string>
    <string name="app_save_name_version_name">App Version Name</string>
    <string name="app_save_name_version_number">App Version Number</string>
    <string name="app_save_name_datetime">Date</string>
    <string name="app_save_name_toast">Please select at Least App or Package Name</string>
    <string name="app_save_name_part_separator">APK Name Part Separator</string>
    <string name="app_save_name_part_separator_summary">Choose the character to use when joining apk name parts together. This is used when creating the apk file.</string>
    <string name="app_save_name_part_separator_space">Space</string>
    <string name="app_save_name_part_separator_underscore">Underscore</string>
    <string name="app_save_name_part_separator_hyphen">Hyphen</string>
    <string name="app_save_name_part_separator_dot">Dot</string>
    <string name="locale_list_title">Language</string>
    <string name="locale_list_summary">%s</string>
    <string name="locale_list_default">System default</string>
    <string name="locale_list_not_supported">Locale %s not supported yet</string>
    <string name="app_name_dialog_ok">OK</string>
    <string name="app_name_dialog_cancel">Cancel</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort_app">Sort</string>
    <string name="menu_sort_app_name">App Name</string>
    <string name="menu_sort_app_package">Package Name</string>
    <string name="menu_sort_app_install">Recently installed</string>
    <string name="menu_sort_app_update">Recently updated</string>
    <string name="menu_sort_app_apk_size">APK size</string>
    <string name="menu_show_save_dir">Saved APKs</string>
    <string name="action_settings">Settings</string>
    <string name="menu_show_app_list">Installed Apps</string>
    <string name="menu_refresh_app_list">Refresh</string>
    <string name="sort_order_asc">ASC</string>
    <string name="sort_order_desc">DESC</string>
    <string name="multiselect_select_all">Select all</string>
    <string name="menu_sort_apk">Sort by…</string>
    <string name="menu_sort_apk_file_name_asc">File name (A to Z)</string>
    <string name="menu_sort_apk_file_name_desc">File name (Z to A)</string>
    <string name="menu_sort_apk_file_size_asc">Size (smallest first)</string>
    <string name="menu_sort_apk_file_size_desc">Size (largest first)</string>
    <string name="menu_sort_apk_file_mod_date_asc">Modified (oldest first)</string>
    <string name="menu_sort_apk_file_mod_date_desc">Modified (newest first)</string>
    <string name="menu_show_open_documents">Other APKs</string>
    <string name="menu_refresh_apk_list">Refresh</string>
    <string name="alert_apk_selected_title">How to use APK</string>
    <string name="action_bottom_sheet_save">Save</string>
    <string name="action_bottom_sheet_share">@string/apk_action_share</string>
    <string name="action_bottom_sheet_save_image">Save icon</string>
    <string name="action_bottom_sheet_open">Open</string>
    <string name="action_bottom_sheet_settings">Settings</string>
    <string name="action_bottom_sheet_uninstall">Uninstall</string>
</resources>