<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="domilopment.apkextractor.ui.MainActivity">
    <item
        android:id="@+id/action_search_app_list"
        android:orderInCategory="0"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/baseline_filter_list_24"
        android:orderInCategory="1"
        android:title="@string/filter_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
